concord_macros/tests/dsl/fail/fail_auth_group_invalid_item.rs
use concord_macros::api;

api! {
    client BadAuthGroupApi {
        base "https://example.com"

        auth {
            retry read
        }
    }

    GET Ping
    path ["ping"]
    -> Text<String>
}

fn main() {}
